made error labels 1 for each field. improved error handling by adding a lot of conditionals